--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,10 @@
 .airbnb-bg{
     background-image: url('../images/0ffd8594-f123-43f0-85bb-7ef88c6f0624.jpg');
 }
+
+.translate-nav {
+    transition-duration: 0.2s !important;
+    transition-property: -ms-transform, -webkit-transform, transform !important;
+    transition-timing-function: ease-out !important;
+    transform: translateY(0px) !important;
+}
