--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11433,6 +11433,10 @@ video {
   background-image: url('../images/0ffd8594-f123-43f0-85bb-7ef88c6f0624.jpg');
 }
 
+.explore-bg{
+  background-image: url('../images/ea6285d9-5352-4447-b13d-b39bfc92dfe5.jpg');
+}
+
 .translate-nav {
   -webkit-transition-duration: 0.2s !important;
           transition-duration: 0.2s !important;
