--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3861,6 +3861,18 @@ video {
   height: 25vh !important;
 }
 
+.h-screen-30 {
+  height: 30vh !important;
+}
+
+.h-screen-40 {
+  height: 40vh !important;
+}
+
+.h-screen-50 {
+  height: 50vh !important;
+}
+
 .h-screen-3\/4 {
   height: 75vh !important;
 }
@@ -11262,7 +11274,7 @@ video {
 }
 
 .w-48 {
-  width: 12rem !important;
+  width: 48% !important;
 }
 
 .w-56 {
@@ -11399,6 +11411,10 @@ video {
 
 .w-screen {
   width: 100vw !important;
+}
+
+.w-percent-19 {
+  width: 19% !important;
 }
 
 .z-0 {
@@ -14680,6 +14696,18 @@ video {
 
   .sm\:h-screen-1\/4 {
     height: 25vh !important;
+  }
+
+  .sm\:h-screen-30 {
+    height: 30vh !important;
+  }
+
+  .sm\:h-screen-40 {
+    height: 40vh !important;
+  }
+
+  .sm\:h-screen-50 {
+    height: 50vh !important;
   }
 
   .sm\:h-screen-3\/4 {
@@ -22083,7 +22111,7 @@ video {
   }
 
   .sm\:w-48 {
-    width: 12rem !important;
+    width: 48% !important;
   }
 
   .sm\:w-56 {
@@ -22220,6 +22248,10 @@ video {
 
   .sm\:w-screen {
     width: 100vw !important;
+  }
+
+  .sm\:w-percent-19 {
+    width: 19% !important;
   }
 
   .sm\:z-0 {
@@ -25484,6 +25516,18 @@ video {
 
   .md\:h-screen-1\/4 {
     height: 25vh !important;
+  }
+
+  .md\:h-screen-30 {
+    height: 30vh !important;
+  }
+
+  .md\:h-screen-40 {
+    height: 40vh !important;
+  }
+
+  .md\:h-screen-50 {
+    height: 50vh !important;
   }
 
   .md\:h-screen-3\/4 {
@@ -32887,7 +32931,7 @@ video {
   }
 
   .md\:w-48 {
-    width: 12rem !important;
+    width: 48% !important;
   }
 
   .md\:w-56 {
@@ -33024,6 +33068,10 @@ video {
 
   .md\:w-screen {
     width: 100vw !important;
+  }
+
+  .md\:w-percent-19 {
+    width: 19% !important;
   }
 
   .md\:z-0 {
@@ -36288,6 +36336,18 @@ video {
 
   .lg\:h-screen-1\/4 {
     height: 25vh !important;
+  }
+
+  .lg\:h-screen-30 {
+    height: 30vh !important;
+  }
+
+  .lg\:h-screen-40 {
+    height: 40vh !important;
+  }
+
+  .lg\:h-screen-50 {
+    height: 50vh !important;
   }
 
   .lg\:h-screen-3\/4 {
@@ -43691,7 +43751,7 @@ video {
   }
 
   .lg\:w-48 {
-    width: 12rem !important;
+    width: 48% !important;
   }
 
   .lg\:w-56 {
@@ -43828,6 +43888,10 @@ video {
 
   .lg\:w-screen {
     width: 100vw !important;
+  }
+
+  .lg\:w-percent-19 {
+    width: 19% !important;
   }
 
   .lg\:z-0 {
@@ -47092,6 +47156,18 @@ video {
 
   .xl\:h-screen-1\/4 {
     height: 25vh !important;
+  }
+
+  .xl\:h-screen-30 {
+    height: 30vh !important;
+  }
+
+  .xl\:h-screen-40 {
+    height: 40vh !important;
+  }
+
+  .xl\:h-screen-50 {
+    height: 50vh !important;
   }
 
   .xl\:h-screen-3\/4 {
@@ -54495,7 +54571,7 @@ video {
   }
 
   .xl\:w-48 {
-    width: 12rem !important;
+    width: 48% !important;
   }
 
   .xl\:w-56 {
@@ -54632,6 +54708,10 @@ video {
 
   .xl\:w-screen {
     width: 100vw !important;
+  }
+
+  .xl\:w-percent-19 {
+    width: 19% !important;
   }
 
   .xl\:z-0 {
